--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.get": "^4.4.2",
     "react": "^16.6.3",
